--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.3.1",
+    "dayjs": "^1.10.7",
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.3.1",
     "perfect-scrollbar": "^1.5.1",
